# ilpeichofabrizio

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
assets/: CornellBox-Original.mtl  CornellBox-empty.mtl  CornellBox-empty4.mtl  CornellBox-lights.mtl  box.mtl  bunny.mtl  cat.mtl  deer-gold.mtl  deer.mtl  home-env.mtl  home.mtl  home2.mtl  house.mtl  signs.mtl  small.mtl
scenes/: box-transparent.json  cat.json  cornell-bunny.json  cornell-deer.json  cornell.json  deer-gold.json  home.json  house.json  lights.json  open.json  sign.json
src/: main.cc  mesh.cc  mesh.hh  object.hh  objloader.cc  objloader.hh  pathtrace.cc  program.cc  program.hh  scene.cc  scene.hh  sphere.cc  sphere.hh
src/shaders/: display.frag.glsl  display.vert.glsl  glint.vert.glsl  pathtrace.comp.glsl  pbr.frag.glsl  pbr.vert.glsl  test.frag.glsl  test.vert.glsl
